Create table of buttons

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,14 @@
 .container {
     margin: auto;
-    border: 3px solid green;
+    border: 2px solid green;
+}
+
+.foldTrueButton {
+    background-color: #ec1212;
+    border: 2px #111111;
+}
+
+.foldFalseButton {
+    background-color: #78b943;
+    border: 2px #111111;
 }
