--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,18 @@
+body {
+    margin: auto;
+    text-align: center;
+    padding: 10px;
+    width: 600px;
+}
+
+label {
+    width: 6px;
+    margin-right: .5px;
+    padding-top: 1.5px;
+  }
+
+
+
 .container {
     margin: auto;
     border: 2px solid green;
