--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,7 +11,6 @@ body {
 
 
 .box {
-    background-color: gainsboro;
     border: 1px solid black;
     border-radius: 2px;
     display: inline-block;
@@ -28,6 +27,6 @@ body {
 
 .container {
     margin: auto;
-    border: 2px solid green;
+    /* border: 2px solid green; */
     padding: 5px;
 }
